--- a/src/Topxia/WebBundle/Resources/views/PayCenter/wxpay-h5.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/wxpay-h5.html.twig
@@ -12,7 +12,7 @@
   <div class="panel-body">
     <p>订单号： {{ order.sn }} </p>
     <p>订单详情： {{ order.title }} </p>
-    <p>订单价格：<span class="text-danger">{{ order.amount }}</span></p>
+    <p>订单价格：<span class="text-danger text-lg">¥ {{ order.amount }}</span></p>
     <div class="pull-right mtm">
       <button class="btn btn-primary js-wxpay">立即支付</button>
     </div>
