--- a/src/Topxia/WebBundle/Resources/views/Group/groups-threads-ul.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/groups-threads-ul.html.twig
@@ -29,7 +29,7 @@
 
         <div class="metas">
           {{ web_macro.user_avatar(user, 'userImg', 'avatar-xxs') }}
-          {{ web_macro.user_link(user ,'pls') }}{{'发起了问题'|trans}}
+          {{ web_macro.user_link(user ,'pls') }}{{'发起了话题'|trans}}
           <span class="divider">•</span>
           {{thread.createdTime|smart_time}}
           {% if group %}
