--- a/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/keyword-add.html.twig
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/keyword-add.html.twig
@@ -8,8 +8,8 @@
     <div class="row form-group">
       <label class="col-md-3 control-label" for="keyword-name-field">{{'敏感词'|trans}}</label>
       <div class="col-md-6 controls">
-        <textarea style="resize:vertical;height:250px;" class="form-control" id="keyword-name-field"  name="name" onfocus="if(value=={{'换行可一次添加多个敏感词'|trans}}){value=''}"  
-        onblur="if (value ==''){value={{'换行可一次添加多个敏感词'|trans}}">{{'换行可一次添加多个敏感词'|trans}}</textarea> 
+        <textarea style="resize:vertical;height:250px;" class="form-control" id="keyword-name-field" name="name"></textarea>
+        <p class="help-block">{{'换行可一次添加多个敏感词'|trans}}</p>
       </div>
     </div>
     <div class="row form-group">
