--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/assistants.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/assistants.html.twig
@@ -67,7 +67,7 @@
                 <img src="{{ avatar }}" class="avatar-small">
                 <span class="nickname">{{ nickname }}</span>
                 <input type="hidden" name="ids[]" value="{{ id }}">     
-                <button  class="close delete-btn" data-role="item-delete" type="button" title="{{'删除'|trans}}" >&times; </button>
+                <button  class="close delete-btn" data-role="item-delete" type="button">&times; </button>
               </li>
             {% endverbatim %}
           </script>
