--- a/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
@@ -7,9 +7,8 @@
   <!-- lesson-content -->
   <div class="manage-player-body">
     <div class="manage-player-header">
-      <a href="{{ path('course_manage_lesson', {id:course.id}) }}" class="btn">返回课时管理</a>
-      <a href="{{ path('course_learn', {id:course.id, preview:1}) }}#lesson/{{ lesson.id }}" class="btn btn-default" target="_blank">{{'预览弹题'|trans}}</a>
-      <span class="text-sm color-gray">{{'本页面所有操作自动保存'|trans}}</span>
+    <a href="{{ path('course_manage_lesson', {id:course.id}) }}" class="btn"><i class="es-icon es-icon-chevronleft"></i>返回课时管理</a>
+      <!-- <span class="text-sm color-gray">{{'本页面所有操作自动保存'|trans}}</span> -->
     </div>
     <div class="manage-player-content" id="lesson-video-content" data-role="lesson-content" {% if setting('storage.video_watermark') >
       0 and setting('storage.video_watermark_image') %}
