--- a/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
@@ -46,7 +46,7 @@
 				<div class="col-xs-2 content ">{{'操作'|trans}}</div>
 			</div>
 		</div>#}
-		<ul class="lesson-list gruop-lesson-list" id="subject-lesson-list">
+		<ul class="lesson-list gruop-lesson-list" id="subject-lesson-list" data-intro-img={{ asset('assets/v2/img/marksintro_1.png') }}  >
 
 		</ul>
 	<!-- </div> -->
