--- a/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
@@ -31,7 +31,10 @@
       <ul class="nav nav-tabs nav-tabs-edit" role="tablist">
         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">随堂练习</a></li>
         <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">字幕</a></li>
+        <li class="static" role="presentation"><a><span class="border"><i class="es-icon es-icon-xinxi" id="step-1" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="为保险起见，所有对视频的编辑操作都将实时保存。"></i></span></a></li>
       </ul>
+      <a href="{{ path('course_lesson_marker_manage_preview', {courseId:course.id,lessonId:lesson.id}) }}" class="btn btn-info btn-preview" target="_blank"  >{{'预览弹题'|trans}}</a>
+
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active pane-question js-pane-question" id="home" data-url="{{ path('course_lesson_question_marker_list',{courseId:course.id,lessonId:lesson.id})}}">
         </div>
