--- a/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
@@ -1,12 +1,13 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
   {% for question in questions %}
-  <li class=" item-lesson {% if question.exist|default(false) %}disdragg {% else %} drag {% endif %}" id="" question-id="{{question.id}}" data-role="scale-blue-item">
+  <li class=" item-lesson {% if question.exist|default(false) %}disdragg {% else %} drag {% endif %}" id="" question-id="{{question.id}}" data-role="scale-blue-item" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}">
     <span class="sqe-number"><i class="question-remove es-icon es-icon-icon_close_circle" data-role="question-remove"></i><span data-role="sqe-number">1</span>、</span>
     <span class="title">
       <i class="icon-drag glyphicon glyphicon-move"></i>
       <span class="color-primary text-xs" data-role="question-type">[{{ dict('questionType')[question.type] }}]</span>
     </span>
     {{question.stem|fill_question_stem_text|plain_text(12) }}
+    <a class="btn-preview js-question-preview" href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}"><i class="es-icon es-icon-visibility" ></i></a>
   </li>
 
 
@@ -33,6 +34,11 @@
   {% else %}
     <div class="empty">{{'一道题都没有'|trans}}</div>
   {% endfor %}
-  {{ web_macro.paginator(paginator) }}
+  {% if paginator.lastPage > 1 %}
+  <li class="more-questions" data-last-page="{{ paginator.lastPage }}" data-current-page="{{ paginator.currentPage }}" data-url='/course/{{ course.id }}/lesson/{{ lesson.id }}/question_marker/search?page='><span class="loading"><img src="{{ asset('assets/img/default/loading.gif') }} ">正在加载...</span><a class="js-more-questions" href="javascript:;" >更多题目<i class="es-icon es-icon-chevronright
+arrow-back
+"></i></a></li>
+  {% endif %}
+<!-- {{ web_macro.paginator(paginator) }}  -->
 
 
