--- a/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
@@ -11,6 +11,7 @@
     					<i class="icon-drag glyphicon glyphicon-move"></i>
     					<span class="color-primary text-xs" data-role="question-type"></span>
     				</span>
+            <span class="info text-overflow" data-role="question-info"></span>
     			</li>
     		</ul>
     		<span class="time" data-role="scale-blue-time"></span>
