--- a/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question-tr.html.twig
@@ -1,14 +1,14 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
   {% for question in questions %}
-  <li class=" item-lesson {% if question.exist|default(false) %}disdragg {% else %} drag {% endif %}" id="" question-id="{{question.id}}" data-role="scale-blue-item" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}">
-    <span class="sqe-number"><i class="question-remove es-icon es-icon-icon_close_circle" data-role="question-remove"></i><span data-role="sqe-number">1</span>、</span>
-    <span class="title">
-      <i class="icon-drag glyphicon glyphicon-move"></i>
-      <span class="color-primary text-xs" data-role="question-type">[{{ dict('questionType')[question.type] }}]</span>
-    </span>
-    {{question.stem|fill_question_stem_text|plain_text(12) }}
-    <a class="btn-preview js-question-preview" href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}"><i class="es-icon es-icon-visibility" ></i></a>
-  </li>
+    <li class=" item-lesson {% if question.exist|default(false) %}disdragg {% else %} drag {% endif %}" id="" question-id="{{question.id}}" data-role="scale-blue-item" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}">
+      <span class="sqe-number"><i class="question-remove es-icon es-icon-icon_close_circle" data-role="question-remove"></i><span data-role="sqe-number">1</span>、</span>
+      <span class="title">
+        <i class="icon-drag glyphicon glyphicon-move"></i>
+        <span class="color-primary text-xs" data-role="question-type">[{{ dict('questionType')[question.type] }}]</span>
+      </span>
+      <span class="info text-overflow">{{question.stem|fill_question_stem_text|plain_text() }}</span>
+      <a class="btn-preview js-question-preview" href="javascript:;" data-toggle="modal" data-target="#modal" data-url="{{ path('course_manage_question_preview', {id:question.id, courseId:course.id}) }}"><i class="es-icon es-icon-visibility" ></i></a>
+    </li>
 
 
   {#<li class="row item-lesson {% if question.exist|default(false) %}disdrag {% else %} drag {% endif %}" id="" question-id="{{question.id}}">
