--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -1,5 +1,3 @@
-
-
 @-webkit-keyframes boxshow{
   0%{box-shadow:0 0 15px #2db7f5;width: 8px; margin-left: -4px;left: 4px}
   25%{box-shadow:0 0 10px #2db7f5;width: 7px; margin-left: -3.5px; left:3.5px }
@@ -97,16 +95,14 @@
     margin: 0;
     overflow: auto;
     padding-right: 15px;
-    &.highlight {
-      border:  1px dashed red;
-    }
     .item-lesson {
       position: relative;
       background-color: transparent;
       border: none;
       line-height: 40px;
-      margin-bottom: 10px;
+      margin-bottom: 0;
       margin-left: 0;
+      cursor: pointer;
       .btn-preview {
         top: 0;
         right: 0;
@@ -114,12 +110,6 @@
         &:hover {
           color: @brand-primary;
         }
-      }
-      &.dragged {
-        border: 1px dashed @gray;
-      }
-      &.disdragg {
-        .opacity(0.3);
       }
       .sqe-number {
         display: none;
@@ -133,6 +123,24 @@
         position: absolute;
         top: 12px;
         right: 5px;
+      }
+      .info {
+        display: inline-block ;
+        max-width: 60%;
+        vertical-align: middle;
+      }
+      &.dragged {
+        border: 1px dashed @gray;
+        position: absolute;
+        width: 220px!important;
+        padding-left: 15px;
+        .btn-preview {
+          display: none;
+        }
+      }
+      &.disdragg {
+        .opacity(0.3);
+        cursor: default;
       }
     }
     .more-questions {
@@ -162,9 +170,6 @@
         }
       }
     }
-    .placeholder {
-      border-bottom: 1px dashed @brand-primary;
-    }
   }
 }
  
@@ -184,6 +189,16 @@
       width: 70%;
       height: 60px;
       line-height: 60px;
+      .title-link {
+        font-size: 16px;
+        color: #fff;
+        i {
+          font-size: 16px;
+        }
+        &:hover {
+          color: @brand-primary;
+        }
+      }
     }
     .manage-player-content {
       height: 100%;
@@ -194,7 +209,6 @@
       top:0;
       bottom: 0;
       background-color: transparent;
-      background-color: #000;
     }
   }
   .manage-edit-body {
@@ -232,7 +246,7 @@
       padding-top: 24px;
       border-top: 1px solid @gray-dark;
       color: @gray;
-      margin-bottom: 20px;
+      margin-bottom: 12px;
       .remask-icon {
         color: @brand-warning;
         font-size: 16px;
@@ -252,6 +266,11 @@
       height: 100%;
       background-color: #414141;
       padding: 0 160px 0 20px;
+      &.highlight {
+        border:  1px dashed @brand-info;
+        background-color: transparent;
+        background-color: rgba(45,183,245, 0.3);
+      }
       .btn-preview {
         display: none;
       }
@@ -283,12 +302,15 @@
           .title {
             display: none;
           }
+          .info {
+            max-width: 150px;
+          }
           .sqe-number {
             display: inline;
           }
         }
         .placeholder {
-          border-color: @brand-primary;
+          border:1px dashed @brand-primary;
         }
       }
       .scale {
@@ -304,7 +326,7 @@
           .line {
             top: 0;
             height: 160px;
-            border-color: red;
+            border-color: @brand-danger;
           }
           .scale-details {
             visibility: visible;
@@ -313,12 +335,11 @@
         }
         &.scale-blue {
           cursor: pointer;
-          height: 132px;
-
+          height: 100px;
+          top:32px;
           .line {
-            top: 32px;
             height: 100px;
-            border-color: #2b9cf0;
+            border-color: @brand-info;
           }
           &.highlight,
           &:hover {
@@ -390,113 +411,6 @@
           -webkit-transform:scale(0.83);
         }
       }
-    }
-  }
-}
-
-.marker-modal {
-  .question-heading {
-    padding-bottom: 15px;
-    margin-bottom: 15px;
-    color: #000;
-    font-size: 18px;
-    border-bottom: 1px solid #f1f1f1;
-  }
-  .question-body {
-    max-height: 300px;
-    overflow: auto;
-    margin-bottom: 15px;
-  }
-  .question-footer {
-    padding: 15px 0;
-  }
-  .question-choices {
-    padding-left: 10px;
-    li {
-      padding: 10px 0 10px 50px;
-      position: relative;
-      line-height: 30px;
-      &:hover {
-        background-color: transparent;
-      }
-      p {
-        margin-bottom: 0;
-        display: inline-block;
-        margin-right: 10px;
-      }
-    } 
-  }
-  .type-check {
-    position: absolute;
-    left: 0;
-    top: 10px;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    background-color: #f1f1f1;
-    color: @gray-dark;
-    .border-radius(50%);
-    &.active {
-      background-color: @brand-primary;
-      color: #fff;
-    }
-    &.correct {
-      background-color: @brand-success;
-      color: #fff;
-    }
-    &.error {
-      background-color: @brand-danger;
-      color: #fff;
-    }
-  }
-  .answer-title {
-    font-size: 12px;
-    color: #919191;
-  }
-  .fill-answer {
-    position: relative;
-    padding: 10px 15px;
-    color: @gray-darker;
-    background-color: #fafafa;
-    margin-bottom: 10px;
-    min-height: 40px;
-    &.correct,&.error {
-      color: #fff;
-      padding-right: 50px;
-    }
-    &.correct {
-      background-color: @brand-success;
-    }
-    &.error {
-      background-color: @brand-danger;
-    }
-    .type {
-      position: absolute;
-      right: 15px;
-      top:10px;
-    }
-    p {
-      margin-bottom: 0;
-    }
-  }
-  .answer-progress {
-    float: left;
-    width: 350px;
-    margin-left: 10px;
-    .progress {
-      float: left;
-      width: 300px;
-      height: 10px;
-      margin-bottom: 0;
-      .border-radius(20px);
-    }
-    .num {
-      float: right;
-      margin-top: -3px;
-      font-size: 12px;
-      color: #919191;
     }
   }
 }
@@ -587,6 +501,108 @@
       right: 120px;
       top: 132px;
       bottom: 5%;
+    }
+  }
+}
+
+.mark-questions-modal {
+  width: 756px;
+  .modal-header {
+    position: relative;
+    padding: 20px 30px;
+    color: #fff;
+    border-color: #fff;
+    border-bottom: 1px solid #F5F8FA;
+    .close {
+      margin-top: -25px;
+      .opacity(1);
+      font-size: 26px;
+      color: #616161;
+    }
+  }
+  .modal-title {
+    font-size: 18px;
+    line-height: 18px;
+    text-align: left;
+    color: #313131;
+  }
+  .modal-content {
+    .border-radius(10px);
+  }
+  .modal-body {
+    padding: 15px 30px;
+  }
+  .topic-bottom {
+    padding-bottom: 20px;
+    font-size: 14px;
+    color: #fff;
+    color: @gray-dark;
+    line-height: 40px;
+    text-align: left;
+    background-color: #F5F8FA;
+    .border-radius(10px);
+    .topic-bottom-info {
+      line-height: 34px;
+      padding: 20px 30px 0;
+      color: #919191;
+      .btn {
+        float: right;
+        margin-left: 20px;
+      }      
+    }
+  }
+  .popup-topic {
+    padding: 0;
+    margin: 0;
+    height: 300px;
+    overflow: auto;
+    list-style-type: none;
+    img {
+      max-width: 100%;
+      vertical-align: top;
+    }
+    p {
+      margin-bottom: 0;
+    }
+    .title {
+      margin-bottom: 14px;
+      line-height: 30px;
+      font-size: 18px;
+      color: @gray-dark;
+    }
+    .list {
+      padding: 10px 0 10px 40px;
+      line-height: 30px;
+      cursor: pointer;
+      cursor: default;
+      position: relative;
+      .num {
+        position: absolute;
+        left: 0;
+        top: 12px;
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        .border-radius(50%);
+        margin-right: 15px;
+        border: 1px solid #c1c1c1;
+        color: #c1c1c1;
+        font-size: 14px;
+        text-align: center;
+        line-height: 22px;
+      }
+    }
+    &.topic-resolve {
+      .list {
+        min-height: 250px;
+        padding: 20px;
+        margin-bottom: 15px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        cursor: default;
+        background-color: #f5f8fa;
+      }
     }
   }
 }
