--- a/web/assets/v2/css/main.css
+++ b/web/assets/v2/css/main.css
@@ -12756,7 +12756,7 @@ textarea {
 .marker-manage .lesson-list .more-questions {
   position: absolute;
   right: 15px;
-  bottom: 15px;
+  bottom: 0;
   left: 0;
   text-align: right;
   color: #919191;
@@ -12832,6 +12832,7 @@ textarea {
 }
 .marker-manage-content .manage-edit-body .tab-pane {
   padding: 30px 0 30px 20px;
+  position: relative;
 }
 .marker-manage-content .manage-edit-body .btn-search {
   position: absolute;
