--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -146,7 +146,7 @@
     .more-questions {
       position: absolute;
       right: 15px;
-      bottom: 15px;
+      bottom: 0;
       left: 0;
       text-align: right;
       color: @gray;
@@ -225,6 +225,7 @@
     }
     .tab-pane {
       padding: 30px 0 30px 20px;
+      position: relative;
     }
     .btn-search {
       position: absolute;
