--- a/src/Custom/WebBundle/Resources/public/css/main.css
+++ b/src/Custom/WebBundle/Resources/public/css/main.css
@@ -144,7 +144,7 @@ a {
   background-color: #f49c00;
 }
 .header-section .header-content .progress .progress-bar.less {
-  background-color: #ff3333;
+  background-color: #FFCC00;
 }
 .header-section .header-content .progress .progress-bar.more {
   background-color: #5ce25c;
