--- a/src/Custom/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,13 @@
         </span></div>
         <div class="item header-progress hidden-xs">
           <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: {{ passPercentage }}%;"></div>
+            <div class="{% if passPercentage == 100 %}
+              progress-bar more
+            {% elseif passPercentage < 100 %}
+              progress-bar less
+            {% elseif passPercentage < 50 %}
+              progress-bar
+            {% endif %}" role="progressbar" style="width: {{ passPercentage }}%;"></div>
           </div>
         </div>
         <div class="item progress-text hidden-xs"> {{ passRate }}</div>
