--- a/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
@@ -1,5 +1,5 @@
 <div class="editbox">
-  <div class="scalebox">
+  <div class="scalebox js-scalebox">
   	<a class="scale scale-blue hidden" data-role="scale-blue">
     	<span class="line">
     	</span>
